--- a/scss/style.scss
+++ b/scss/style.scss
@@ -115,7 +115,7 @@ body {
     }
 }
 
-.header__cta {
+.common__cta {
     margin-top: 0.5rem;
     line-height: 1;
     img {
@@ -275,16 +275,16 @@ body {
     }
 }
 
-//*------------------*
-//*  news
-//*------------------*
+
 .news {
     background: #F5FCF8;
 }
-
+//*------------------*
+//*  news
+//*------------------*
 .news__container {
     text-align: center;
-    padding: 0 1rem;
+    padding: 0 1rem 11.2rem 1rem;
 }
 
 .news__lists__container {
@@ -293,25 +293,6 @@ body {
     padding: 2.6rem 5rem 2.6rem 6.6rem;
     border-radius: 30px;
     box-shadow: 0px 3px 6px #00000029;
-    p {
-        font-weight: 700;
-        padding-top: 3.4rem;
-        padding-right: 16px;
-        text-align: right;
-        position: relative;
-        &::after {
-            content: "";
-            width: 0;
-            height: 0;
-            border-style: solid;
-            border-width: 7px 0 7px 10px;
-            border-color: transparent transparent transparent #444;
-            position: absolute;
-            bottom: 11px;
-            right: 0;
-
-        }
-    }
 }
 
 .news__list {
@@ -338,3 +319,105 @@ body {
     }
 }
 
+.news__list__link {
+    display: block;
+    font-weight: 700;
+    padding-top: 3.4rem;
+    padding-right: 16px;
+    text-align: right;
+    position: relative;
+    &::after {
+        content: "";
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 7px 0 7px 10px;
+        border-color: transparent transparent transparent #444;
+        position: absolute;
+        bottom: 11px;
+        right: 0;
+    }
+}
+
+//*------------------*
+//*  footer
+//*------------------*
+.footer {
+    background: #fff;
+}
+
+.footer__container {
+    padding-top: 19.6rem;
+    padding-bottom: 16.3rem;
+}
+
+.footer__contents {
+    display: flex;
+    flex-direction: column;
+    @include mq('md') {
+        flex-direction: row-reverse;
+    }
+}
+
+tbody {
+    padding-top: 2rem;
+}
+
+.footer__map {
+    @include mq('md') {
+        margin-right: 3.4rem;
+    }
+}
+
+.footer__contents__logo {
+    img {
+        width: 263px;
+    }
+}
+
+.footer__contents__address {
+    margin-top: 2.5rem;
+    padding-bottom: 2.8rem;
+}
+
+.footer__cta {
+    margin-top: 2.5rem;
+}
+
+.footer__contents__info {
+    border-top: 2px solid #E7E7E7;
+    border-bottom: 2px solid #E7E7E7;
+    width: 533px;
+    font-size: 1.4rem;
+}
+
+.footer__contents__info__wrap {
+    display: flex;
+    margin-top: 1.6rem;
+    margin-bottom: 1.6rem;
+    h4 {
+        padding-right: 2.8rem;
+    }
+    dt {
+        padding-left: 2.3rem;
+        font-weight: 400;
+        border-left: 2px solid #E7E7E7;
+    }
+    dd {
+        padding-left: 2.3rem;
+    }
+}
+
+.info__time {
+    display: flex;
+}
+
+.week {
+    background: linear-gradient(transparent 70%, #99E5A5 30%);
+}
+
+.copy {
+    margin-top: 2.15rem;
+    font-size: 1.1rem;
+    text-align: right;
+}
